[tool.poetry]
name = "stop-ecocentre"
version = "0.1.0"
description = "Static web site"
authors = ["stockersky <stockerskybits@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Lektor = "^3.3.11"
google-api-python-client = "^2.122.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
